checkpoint: galeria funcional

--- a/src/blocks/galeria.astro
+++ b/src/blocks/galeria.astro
@@ -3,138 +3,89 @@
 ---
 
 <section class="galeria">
-  <div class="container">
-    <div class="row text-center d-flex justify-content-center align-items-center">
-      <div class="content-galeria">
-        <h2 class="title">Un recorrido de estos 15 años</h2>
-        <p class="subtitle">Junto a personas que son muy importantes en mi vida</p>
-        <div class="anim-galeria"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 111 121" width="111" height="121" preserveAspectRatio="xMidYMid meet" style="width: 100%; height: 100%; transform: translate3d(0px, 0px, 0px);"><defs><clipPath id="__lottie_element_39"><rect width="111" height="121" x="0" y="0"></rect></clipPath></defs><g clip-path="url(#__lottie_element_39)"><g transform="matrix(1,0,0,1,0,0)" opacity="1" style="display: block;"><g opacity="1" transform="matrix(1,0,0,1,69.58100128173828,37.60599899291992)"><path stroke-linecap="round" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="10" stroke="rgb(124,160,151)" stroke-opacity="1" stroke-width="3.681" d=" M7.617000102996826,11.065999984741211 C7.617000102996826,11.065999984741211 -7.618000030517578,11.065999984741211 -7.618000030517578,11.065999984741211 C-9.434000015258789,11.065999984741211 -10.904999732971191,9.593999862670898 -10.904999732971191,7.7779998779296875 C-10.904999732971191,7.7779998779296875 -10.904999732971191,-7.7769999504089355 -10.904999732971191,-7.7769999504089355 C-10.904999732971191,-9.593000411987305 -9.434000015258789,-11.065999984741211 -7.618000030517578,-11.065999984741211 C-7.618000030517578,-11.065999984741211 7.617000102996826,-11.065999984741211 7.617000102996826,-11.065999984741211 C9.432999610900879,-11.065999984741211 10.904999732971191,-9.593000411987305 10.904999732971191,-7.7769999504089355 C10.904999732971191,-7.7769999504089355 10.904999732971191,7.7779998779296875 10.904999732971191,7.7779998779296875 C10.904999732971191,9.593999862670898 9.432999610900879,11.065999984741211 7.617000102996826,11.065999984741211z"></path></g></g><g transform="matrix(1,0,0,1,0,0)" opacity="1" style="display: block;"><g opacity="1" transform="matrix(1,0,0,1,45.99800109863281,67.86699676513672)"><path stroke-linecap="round" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="10" stroke="rgb(124,160,151)" stroke-opacity="1" stroke-width="3.681" d=" M36.66899871826172,-5.685999870300293 C36.66899871826172,-5.685999870300293 36.66899871826172,-11.456999778747559 36.66899871826172,-11.456999778747559 C39.69200134277344,-11.531000137329102 42.12200164794922,-13.99899959564209 42.12200164794922,-17.040000915527344 C42.12200164794922,-17.040000915527344 42.12200164794922,-43.48500061035156 42.12200164794922,-43.48500061035156 C42.12200164794922,-46.57099914550781 39.61899948120117,-49.07400131225586 36.53300094604492,-49.07400131225586 C36.53300094604492,-49.07400131225586 10.633000373840332,-49.07400131225586 10.633000373840332,-49.07400131225586 C7.546000003814697,-49.07400131225586 5.044000148773193,-46.57099914550781 5.044000148773193,-43.48500061035156 C5.044000148773193,-43.48500061035156 5.044000148773193,-17.040000915527344 5.044000148773193,-17.040000915527344 C5.044000148773193,-13.95300006866455 7.546000003814697,-11.451000213623047 10.633000373840332,-11.451000213623047 C10.633000373840332,-11.451000213623047 11.859000205993652,-11.451000213623047 11.859000205993652,-11.451000213623047 C11.859000205993652,-11.451000213623047 11.859000205993652,-5.72599983215332 11.859000205993652,-5.72599983215332 C11.859000205993652,-5.72599983215332 -35.93199920654297,-5.72599983215332 -35.93199920654297,-5.72599983215332 C-39.803001403808594,-5.72599983215332 -42.93899917602539,-2.5869998931884766 -42.93899917602539,1.2829999923706055 C-42.93899917602539,1.2829999923706055 -42.93899917602539,42.064998626708984 -42.93899917602539,42.064998626708984 C-42.93899917602539,45.93600082397461 -39.803001403808594,49.07400131225586 -35.93199920654297,49.07400131225586 C-35.93199920654297,49.07400131225586 35.93199920654297,49.07400131225586 35.93199920654297,49.07400131225586 C39.801998138427734,49.07400131225586 42.93899917602539,45.93600082397461 42.93899917602539,42.064998626708984 C42.93899917602539,42.064998626708984 42.93899917602539,1.2829999923706055 42.93899917602539,1.2829999923706055 C42.93899917602539,-2.3380000591278076 40.19200134277344,-5.316999912261963 36.66899871826172,-5.685999870300293z"></path></g><g opacity="1" transform="matrix(1,0,0,1,45.99800109863281,88.7239990234375)"><path stroke-linecap="round" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="10" stroke="rgb(124,160,151)" stroke-opacity="1" stroke-width="3.681" d=" M17.584999084472656,0.0010000000474974513 C17.584999084472656,9.711999893188477 9.711000442504883,17.584999084472656 -0.0010000000474974513,17.584999084472656 C-9.711999893188477,17.584999084472656 -17.584999084472656,9.711999893188477 -17.584999084472656,0.0010000000474974513 C-17.584999084472656,-9.711000442504883 -9.711999893188477,-17.584999084472656 -0.0010000000474974513,-17.584999084472656 C9.711000442504883,-17.584999084472656 17.584999084472656,-9.711000442504883 17.584999084472656,0.0010000000474974513z"></path></g></g><g transform="matrix(0,0,0,0,46.39699935913086,88.28099822998047)" opacity="1" style="display: block;"><g opacity="1" transform="matrix(1,0,0,1,45.99800109863281,88.7239990234375)"><path fill="rgb(124,160,151)" fill-opacity="1" d=" M17.584999084472656,0.0010000000474974513 C17.584999084472656,9.711999893188477 9.711000442504883,17.584999084472656 -0.0010000000474974513,17.584999084472656 C-9.711999893188477,17.584999084472656 -17.584999084472656,9.711999893188477 -17.584999084472656,0.0010000000474974513 C-17.584999084472656,-9.711000442504883 -9.711999893188477,-17.584999084472656 -0.0010000000474974513,-17.584999084472656 C9.711000442504883,-17.584999084472656 17.584999084472656,-9.711000442504883 17.584999084472656,0.0010000000474974513z"></path></g></g><g style="display: none;" transform="matrix(1,0,0,1,0,0)" opacity="0.004687500004086758"><g opacity="1" transform="matrix(1,0,0,1,38.15999984741211,16.53499984741211)"><path stroke-linecap="round" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="10" stroke="rgb(124,160,151)" stroke-opacity="1" stroke-width="3.681" d=" M-4.390999794006348,-3.194000005722046 C-4.390999794006348,-3.194000005722046 4.390999794006348,3.194000005722046 4.390999794006348,3.194000005722046"></path></g><g opacity="1" transform="matrix(1,0,0,1,38.15999984741211,42.29899978637695)"><path stroke-linecap="round" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="10" stroke="rgb(124,160,151)" stroke-opacity="1" stroke-width="3.681" d=" M-4.390999794006348,3.194000005722046 C-4.390999794006348,3.194000005722046 4.390999794006348,-3.194000005722046 4.390999794006348,-3.194000005722046"></path></g><g opacity="1" transform="matrix(1,0,0,1,0,0)"><path stroke-linecap="round" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="10" stroke="rgb(124,160,151)" stroke-opacity="1" stroke-width="3.681" d=" M30.224000930786133,29.426000595092773 C30.224000930786133,29.426000595092773 39.76599884033203,29.426000595092773 39.76599884033203,29.426000595092773"></path></g><g opacity="1" transform="matrix(1,0,0,1,99.36000061035156,16.53499984741211)"><path stroke-linecap="round" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="10" stroke="rgb(124,160,151)" stroke-opacity="1" stroke-width="3.681" d=" M4.390999794006348,-3.194000005722046 C4.390999794006348,-3.194000005722046 -4.390999794006348,3.194000005722046 -4.390999794006348,3.194000005722046"></path></g><g opacity="1" transform="matrix(1,0,0,1,99.36000061035156,42.29899978637695)"><path stroke-linecap="round" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="10" stroke="rgb(124,160,151)" stroke-opacity="1" stroke-width="3.681" d=" M4.390999794006348,3.194000005722046 C4.390999794006348,3.194000005722046 -4.390999794006348,-3.194000005722046 -4.390999794006348,-3.194000005722046"></path></g><g opacity="1" transform="matrix(1,0,0,1,0,0)"><path stroke-linecap="round" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="10" stroke="rgb(124,160,151)" stroke-opacity="1" stroke-width="3.681" d=" M107.29499816894531,29.426000595092773 C107.29499816894531,29.426000595092773 97.75299835205078,29.426000595092773 97.75299835205078,29.426000595092773"></path></g></g><g style="display: none;" transform="matrix(1,0,0,1,0,0)" opacity="0.003125000002724363"><g opacity="1" transform="matrix(1,0,0,1,69.58100128173828,37.60599899291992)"><path fill="rgb(124,160,151)" fill-opacity="1" d=" M7.617000102996826,11.065999984741211 C7.617000102996826,11.065999984741211 -7.618000030517578,11.065999984741211 -7.618000030517578,11.065999984741211 C-9.434000015258789,11.065999984741211 -10.904999732971191,9.593999862670898 -10.904999732971191,7.7779998779296875 C-10.904999732971191,7.7779998779296875 -10.904999732971191,-7.7769999504089355 -10.904999732971191,-7.7769999504089355 C-10.904999732971191,-9.593000411987305 -9.434000015258789,-11.065999984741211 -7.618000030517578,-11.065999984741211 C-7.618000030517578,-11.065999984741211 7.617000102996826,-11.065999984741211 7.617000102996826,-11.065999984741211 C9.432999610900879,-11.065999984741211 10.904999732971191,-9.593000411987305 10.904999732971191,-7.7769999504089355 C10.904999732971191,-7.7769999504089355 10.904999732971191,7.7779998779296875 10.904999732971191,7.7779998779296875 C10.904999732971191,9.593999862670898 9.432999610900879,11.065999984741211 7.617000102996826,11.065999984741211z"></path></g></g></g></svg></div>
-      </div>
+    <div class="container">
+        <div class="row text-center d-flex justify-content-center align-items-center">
+            <div class="content-galeria">
+                <h2 class="title">Un recorrido de estos 15 años</h2>
+                <p class="subtitle">Junto a personas que son muy importantes en mi vida</p>
+                <div class="anim-galeria">
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 
+    <div class="content-fotos">
+        <div class="shadow-left"></div>
+        <div class="shadow-right"></div>
 
-  <div class="content-fotos">
-    <div class="shadow-left"></div>
-    <div class="shadow-right"></div>
- 
-
-    <div class="carrusel slick-initialized slick-slider slick-dotted">
-        <div class="slick-list draggable" style="padding: 0px 40px;"><div class="slick-track" style="opacity: 1; width: 2850px; transform: translate3d(-1425px, 0px, 0px);"><div class="slick-slide slick-cloned" style="width: 285px;" data-slick-index="-2" id="" aria-hidden="true" tabindex="-1">
+        <div class="carrusel">
+            <div class="item-galeria">
             <div class="polaroid">
-                <a href="gallery/3.jpg" data-fancybox="galeria" tabindex="-1">
-                    <img src="gallery/3.jpg" alt="">
+                <a href="/galeria/1.jpg" data-fancybox="galeria">
+                    <img src="/galeria/1.jpg" alt="Recuerdo 1">
                 </a>
             </div>
         </div>
-    <div class="slick-slide slick-cloned slick-center" style="width: 285px;" data-slick-index="-1" id="" aria-hidden="true" tabindex="-1">
-        <div class="polaroid">
-            <a href="/galeria/4.jpg" data-fancybox="galeria" tabindex="-1">
-                <img src="/galeria/4.jpg" alt="">
-            </a>
-        </div>
-    </div>
-    <div class="slick-slide slick-cloned" style="width: 285px;" data-slick-index="7" id="" aria-hidden="true" tabindex="-1">
-          <div class="polaroid">
-                <a href="/galeria/4.jpg" data-fancybox="galeria" tabindex="-1">
-                    <img src="/galeria/4.jpg" alt="">
+
+        <div class="item-galeria">
+            <div class="polaroid">
+                <a href="/galeria/2.jpg" data-fancybox="galeria">
+                    <img src="/galeria/2.jpg" alt="Recuerdo 2">
                 </a>
-          </div>
+            </div>
         </div>
+
+        <div class="item-galeria">
+            <div class="polaroid">
+                <a href="/galeria/3.jpg" data-fancybox="galeria">
+                    <img src="/galeria/3.jpg" alt="Recuerdo 3">
+                </a>
+            </div>
+        </div>
+
+        <div class="item-galeria">
+            <div class="polaroid">
+                <a href="/galeria/4.jpg" data-fancybox="galeria">
+                    <img src="/galeria/4.jpg" alt="Recuerdo 4">
+                </a>
+            </div>
+        </div>
+
     </div>
-</div>
-<ul class="slick-dots" style="" role="tablist"><li class="" role="presentation"><button type="button" role="tab" id="slick-slide-control00" aria-controls="slick-slide00" aria-label="1 of 4" tabindex="-1">1</button></li><li role="presentation" class=""><button type="button" role="tab" id="slick-slide-control01" aria-controls="slick-slide01" aria-label="2 of 4" tabindex="-1">2</button></li><li role="presentation" class=""><button type="button" role="tab" id="slick-slide-control02" aria-controls="slick-slide02" aria-label="3 of 4" tabindex="-1">3</button></li><li role="presentation" class="slick-active">
-    <button type="button" role="tab" id="slick-slide-control03" aria-controls="slick-slide03" aria-label="4 of 4" tabindex="0" aria-selected="true">4</button>
-</li>
-</ul>
-</div>
-
-  </div>
-
-
-
-
 </section>
 
 
-<style>
-    /* Galeria */
+<script>
+    //@ts-ignore
+    const initCarrusel = () => {
+        const $target = $('.carrusel');
+        
+        // Verificamos que el elemento exista y no esté ya inicializado
+        if ($target.length > 0 && !$target.hasClass('slick-initialized')) {
+            // @ts-ignore
+            $target.slick({
+                lazyLoad: 'ondemand',
+                autoplay: true,
+                autoplaySpeed: 2000,
+                centerMode: true,
+                dots: false,
+                centerPadding: '20px',
+                slidesToShow: 3,
+                prevArrow: false,
+                nextArrow: false,
+                responsive: [
+                    {
+                        breakpoint: 768,
+                        settings: {
+                            centerPadding: '40px',
+                            slidesToShow: 1 // Mejor 1 en mobile para que se luzca el centerMode
+                        }
+                    }
+                ]
+            });
+        }
+    };
 
-    section.galeria{
-    padding-top: 50px;
-    padding-bottom: 50px;
-    position: relative;
-    background-color: var(--color-5);
-    }
-
-    section.galeria .anim-galeria{
-    width: 70px;
-    margin: 0 auto;
-    }
-
-
-    section.galeria .content-fotos{
-    margin-top: 40px;
-    position: relative;
-    }
-
-    section.galeria .content-fotos img{
-    width: 100%;
-    }
-
-
-    section.galeria .content-fotos .polaroid a{
-    outline: none;
-    }
-
-
-    section.galeria .content-fotos .polaroid{
-    background-color: #eee;
-    padding: 15px;
-    padding-bottom: 100px;
-    margin: 5px;
-    -webkit-box-shadow: 0px 0px 5px -1px rgba(0,0,0,0.40);
-    -moz-box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.432);
-    box-shadow: 0px 0px 5px -1px rgba(0,0,0,0.40);
-    
-    -webkit-transition: all 0.5s 0s ease;
-    -moz-transition: all 0.5s 0s ease;
-    -o-transition: all 0.5s 0s ease;
-    transition: all 0.5s 0s ease;
-    }
-
-    section.galeria .slick-slide:focus{
-    outline: none !important;
-    }
-
-    section.galeria .slick-center .polaroid{
-    background-color: #fff !important;
-    }
-
-    .content-fotos .shadow-left{
-    display: none;
-    }
-
-    .content-fotos .shadow-right{
-    display: none;
-    }
-
-    .slick-dots{
-    bottom: -30px;
-    }
-
-
-    section.galeria .slick-dots li button:before{
-    font-size: 45px !important;
-    color: var(--color-3)  !important;
-    opacity: 0.60;
-    }
-
-    section.galeria .slick-dots li.slick-active button:before{
-    opacity: 1;
-    }
-
-    /* ---------- */
-
-
-</style>
+    // Se ejecuta al cargar la página
+    document.addEventListener('DOMContentLoaded', initCarrusel);  
+</script>
