--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '@/layouts/Layout.astro';
 import Portada from '@/blocks/portada.astro';
 import CuentaRegresiva from '@/blocks/cuenta-regresiva.astro';
 import CeremoniaFiesta from '@/blocks/ceremonia-fiesta.astro';
-
+import Galeria from '@/blocks/galeria.astro';
 import Regalos from '@/blocks/regalos.astro';
 import Instagram from '@/blocks/instagram.astro';
 import Footer from '@/blocks/footer.astro';
@@ -14,7 +14,7 @@ import Footer from '@/blocks/footer.astro';
 	<Portada />
 	<CuentaRegresiva />
 	<CeremoniaFiesta />
-
+	<Galeria />
 	<Regalos />
 	<Instagram />
 	<Footer />
