--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,16 +1,12 @@
 ---
-
 import 'bootstrap/dist/css/bootstrap.min.css';
-import 'slick-carousel/slick/slick.css';
 import 'slick-carousel/slick/slick-theme.css';
+import 'slick-carousel/slick/slick.css';
 import 'aos/dist/aos.css';
 import '@fancyapps/fancybox/dist/jquery.fancybox.min.css';
 import '../styles/addEvent.css';
 import '../styles/global.css';
 import '../styles/responsive.css';
-// import 'bootstrap/dist/js/bootstrap.bundle.min.js';
-
-
 
 interface Props { title: string; }
 const { title } = Astro.props;
@@ -41,7 +37,14 @@ const { title } = Astro.props;
 		
 		<script is:inline src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 		<script is:inline src="https://cdn.jsdelivr.net/npm/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+		<script is:inline src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+		<script is:inline src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+		<script is:inline src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"></script>
+		<script is:inline src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+		<script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.13.0/lottie_svg.min.js" integrity="sha512-HCpipdm4BrY9+vnxoUu+n1GDyD7eK9KpzXIJs8U9Z4gT1EzMUJdQ5bHOJt/JPvZGFcLETBnC1ryKtirSgR2wKQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		<script is:inline src="/scripts/parallax.min.js"></script>
+	
+		
 		
 	</head>
 	<body data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
@@ -57,6 +60,8 @@ const { title } = Astro.props;
 			window.addEventListener('load', () => {
 				AOS.init();
 			});
+
+			
 		</script>
 
 
