--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import Footer from '@/blocks/footer.astro';
 	<Galeria />
 	<Regalos />
 	<Instagram />
-	<Footer />
+	<Footer name='Elizabeth'/>
 
 	<script>
 		import '../scripts/main.js';
