--- a/src/blocks/footer.astro
+++ b/src/blocks/footer.astro
@@ -1,5 +1,6 @@
 ---
-
+interface Props { name: string; }
+const { name } = Astro.props;
 ---
 
 <section class="footer">
@@ -7,7 +8,7 @@
     <div class="row">
       <div class="col-md-6 col-nombres-footer d-flex justify-content-center align-items-center">
         <div>
-          <h4>Florencia</h4>
+          <h4>{name}</h4>
           <h5>Mis 15 años</h5>
         </div>
       </div>
