--- a/src/blocks/cuenta-regresiva.astro
+++ b/src/blocks/cuenta-regresiva.astro
@@ -42,8 +42,7 @@
 
 
           <div class="d-flex justify-content-center align-items-center">
-            <!-- Corazon -->
-
+            <div class="corazon-falta " ></div>
           </div>
 
         </div>
