--- a/src/blocks/galeria.astro
+++ b/src/blocks/galeria.astro
@@ -27,6 +27,7 @@
             </div>
         </div>
 
+        <!-- Crear bucle para creación dinámica de fotos, por ahora hardcodeado -->
         <div class="item-galeria">
             <div class="polaroid">
                 <a href="/galeria/2.jpg" data-fancybox="galeria">
