--- a/src/blocks/instagram.astro
+++ b/src/blocks/instagram.astro
@@ -1,6 +1,10 @@
 ---
-
+interface Props {
+    hashtag: string;
+}
+const { hashtag } = Astro.props;
 ---
+
 <section class="instagram">
     <div class="container">
       <div class="row text-center d-flex justify-content-center align-items-center">
@@ -11,7 +15,7 @@
             </div>
         </div>
         <div class="w-100">
-            <a target="_blank" href="https://www.instagram.com/" class="hashtag">#mis15eli</a>
+            <a target="_blank" href="https://www.instagram.com/" class="hashtag">{hashtag}</a>
         </div>
         <br>
 
