--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,10 +1,10 @@
 ---
 import 'bootstrap/dist/css/bootstrap.min.css';
-import 'slick-carousel/slick/slick-theme.css';
 import 'slick-carousel/slick/slick.css';
-import 'aos/dist/aos.css';
+import 'slick-carousel/slick/slick-theme.css';
 import '@fancyapps/fancybox/dist/jquery.fancybox.min.css';
 import '../styles/addEvent.css';
+import 'aos/dist/aos.css';
 import '../styles/global.css';
 import '../styles/responsive.css';
 
@@ -17,16 +17,12 @@ const { title } = Astro.props;
 <html lang="es">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="color-scheme" content="light only">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="robots" content="noindex, nofollow">
+		<meta name="color-scheme" content="light only">
 		<meta name="theme-color" content="#FFFCF8">
-		<meta name="msapplication-TileColor" content="#FFFFFF">
 		
 		<title>{title}</title>
-
-
-
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 
@@ -35,17 +31,14 @@ const { title } = Astro.props;
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 		<link href="https://fonts.googleapis.com/css2?family=Parisienne&amp;family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet">
 		
-		<script is:inline src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-		<script is:inline src="https://cdn.jsdelivr.net/npm/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
-		<script is:inline src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-		<script is:inline src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-		<script is:inline src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"></script>
-		<script is:inline src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-		<script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.13.0/lottie_svg.min.js" integrity="sha512-HCpipdm4BrY9+vnxoUu+n1GDyD7eK9KpzXIJs8U9Z4gT1EzMUJdQ5bHOJt/JPvZGFcLETBnC1ryKtirSgR2wKQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-		<script is:inline src="/scripts/parallax.min.js"></script>
-	
-		
-		
+		<script type="text/javascript" is:inline src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+		<script type="text/javascript" is:inline src="https://cdn.jsdelivr.net/npm/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+		<script type="text/javascript" is:inline src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+		<script type="text/javascript" is:inline src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+		<script type="text/javascript" is:inline src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"></script>
+		<script type="text/javascript" is:inline src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+		<script type="text/javascript" is:inline src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.13.0/lottie_svg.min.js" integrity="sha512-HCpipdm4BrY9+vnxoUu+n1GDyD7eK9KpzXIJs8U9Z4gT1EzMUJdQ5bHOJt/JPvZGFcLETBnC1ryKtirSgR2wKQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<script type="text/javascript" is:inline src="/scripts/parallax.min.js"></script>
 	</head>
 	<body data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
 
@@ -60,8 +53,10 @@ const { title } = Astro.props;
 			window.addEventListener('load', () => {
 				AOS.init();
 			});
+		</script>
 
-			
+		<script>
+			import '../scripts/main2.js';
 		</script>
 
 
