--- a/src/modals/cbu.modal.astro
+++ b/src/modals/cbu.modal.astro
@@ -74,7 +74,7 @@ const { titular, nroCuenta, cbu, alias } = Astro.props as Props;
 
                 <div class="modal-body">
                     <p>Titular: {titular}</p>
-                    <p>Número de Cuenta: {nroCuenta}</p>
+                    <!-- <p>Número de Cuenta: {nroCuenta}</p> -->
                     <p>CBU: {cbu}</p>
                     <p>Alias: {alias}</p>
                 </div>
