--- a/src/modals/tips.modal.astro
+++ b/src/modals/tips.modal.astro
@@ -1,52 +1,98 @@
+---
+interface Props {
+  tip1: string;
+  tip2?: string;
+  tip3?: string;
+  tip4?: string;
+  tip5?: string;
+}
+
+const { tip1, tip2, tip3, tip4, tip5 } = Astro.props as Props;
+---
+
 <div id="modalTips" class="modal fade" tabindex="-1">
   <div class="modal-dialog modal-md modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-content-2">
-
         <picture>
-          <source type="image/webp" srcset="https://fixdate.io/modelo-invitacion/54/img/flores_Grupo04_A.webp">
-          <source type="image/png" srcset="https://fixdate.io/modelo-invitacion/54/img/flores_Grupo04_A.png">
-          <img class="adorno adorno-1 aos-init aos-animate" data-aos="fade-right" data-aos-delay="300" data-aos-duration="1000" data-aos-once="false" src="https://fixdate.io/modelo-invitacion/54/img/flores_Grupo04_A.png" alt="" loading="lazy">
+          <source type="image/webp"
+            srcset="/flores_Grupo04_A.webp"
+          />
+          <source
+            type="image/png"
+            srcset="/flores_Grupo04_A.png"
+          />
+          <img
+            class="adorno adorno-1 aos-init aos-animate"
+            data-aos="fade-right"
+            data-aos-delay="300"
+            data-aos-duration="1000"
+            data-aos-once="false"
+            src="/flores_Grupo04_A.png"
+            alt=""
+            loading="lazy"
+          />
         </picture>
 
-
         <picture>
-          <source type="image/webp" srcset="https://fixdate.io/modelo-invitacion/54/img/flores_Grupo04_B.webp">
-          <source type="image/png" srcset="https://fixdate.io/modelo-invitacion/54/img/flores_Grupo04_B.png">
-          <img class="adorno adorno-2 aos-init aos-animate" data-aos="fade-right" data-aos-delay="400" data-aos-duration="1000" data-aos-once="false" src="https://fixdate.io/modelo-invitacion/54/img/flores_Grupo04_B.png" alt="" loading="lazy">
+          <source
+            type="image/webp"
+            srcset="/flores_Grupo04_B.webp"
+          />
+          <source
+            type="image/png"
+            srcset="/flores_Grupo04_B.png"
+          />
+          <img
+            class="adorno adorno-2 aos-init aos-animate"
+            data-aos="fade-right"
+            data-aos-delay="400"
+            data-aos-duration="1000"
+            data-aos-once="false"
+            src="/flores_Grupo04_B.png"
+            alt=""
+            loading="lazy"
+          />
         </picture>
 
-        <div class="img-top-modal d-flex justify-content-center align-items-start">
-
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <div
+          class="img-top-modal d-flex justify-content-center align-items-start"
+        >
+          <button
+            type="button"
+            class="close"
+            data-dismiss="modal"
+            aria-label="Close"
+          >
             <span aria-hidden="true">×</span>
           </button>
 
           <div class="white-circle-icon">
-            <img class="" src="https://fixdate.io/modelo-invitacion/54/img/tips.svg" alt="">
+            <img
+              class=""
+              src="/tips.svg"
+              alt=""
+            />
           </div>
-
         </div>
 
-
-
         <div class="modal-header">
-
           <h5 class="modal-title">Tips y Notas</h5>
-
         </div>
 
         <div class="modal-body">
-
-          <p>Contenido Tips y Notas</p>
-
+          <ul class="tips-list">
+            <p>{tip1}</p>
+            <p>{tip2}</p>
+            <p>{tip3}</p>
+            <p>{tip4}</p>
+            <p>{tip5}</p>
+          </ul>
         </div>
 
-
         <div class="modal-footer"></div>
-
-
       </div>
     </div>
   </div>
 </div>
+
