--- a/src/blocks/fiesta.astro
+++ b/src/blocks/fiesta.astro
@@ -58,7 +58,7 @@
     </div>
 </section>
 
-<script>
+<!-- <script>
     $("body").on("click", "a.sugerir-cancion", function (e) {
         e.preventDefault();
         $("#error-form").remove();
@@ -232,4 +232,4 @@
     //             });
     //     }
     // });
-</script>
+</script> -->
