--- a/src/blocks/regalos.astro
+++ b/src/blocks/regalos.astro
@@ -38,7 +38,7 @@
   </div>
 </section>
 
-
+<!-- 
 <script>
   $('body').on('click', 'a.modal-regalos', function(e) {
     e.preventDefault();
@@ -48,4 +48,4 @@
       backdrop: 'static'
     })
   });
-</script>
+</script> -->
