--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,8 +20,8 @@ const NAME = "Elizabeth";
 const FECHA_TEXT = "Domingo 24 de Mayo - 21hs a 05hs";
 const START_DATE = "2026-05-24 21:00:00";
 const END_DATE = "2026-05-25 05:00:00";
-const SALON = "Salón Jano's";
-const DIRECCION = "México 334 - San Telmo - Capital Federal";
+const SALON = "Jano's San Telmo Boutique";
+const DIRECCION = "México 334, C1097 Cdad. Autónoma de Buenos Aires";
 const HASHTAG = "#mis15eli";
 const PORTADA_TEXT = "Te espero para compartir la alegría de esa noche que será para mi mágica, inolvidable y única.";
 const PORTADA_FECHA = "24.05.2026";
