fix: adjust button width for modal in regalos section

--- a/src/blocks/regalos.astro
+++ b/src/blocks/regalos.astro
@@ -33,7 +33,7 @@
         </div>
       </div>
       <br>
-      <a href="#" class="boton modal-regalos">Número de CBU</a>
+      <a href="#" class="boton modal-regalos" style="width: auto;">Número de CBU</a>
     </div>
   </div>
 </section>
